--- a/examples/mobx/index.html
+++ b/examples/mobx/index.html
@@ -10,7 +10,8 @@
   <script>
     SystemJS.config({
       map: {
-        "plugin-babel": "https://unpkg.com/systemjs-plugin-babel@0.0.25/plugin-babel.js",
+        "babel-preset-react": "https://rawgit.com/eggheadio/plnkr-bundles/master/babel-preset-react.js",
+        "babel-plugin-transform-decorators-legacy": "https://rawgit.com/eggheadio/plnkr-bundles/master/babel-plugin-transform-decorators-legacy.js",
         "systemjs-babel-build": "https://unpkg.com/systemjs-plugin-babel@0.0.25/systemjs-babel-browser.js",
         "babel-plugin-transform-decorators-legacy": "https://rawgit.com/eggheadio/plnkr-bundles/master/decorators.js",
         "react": "https://unpkg.com/react@16.0.0/umd/react.development.js",
@@ -24,8 +25,8 @@
         "*.js": {
           esModule: true,
           babelOptions: {
-            react: true,
-            plugins: ['babel-plugin-transform-decorators-legacy'],
+            presets: ["babel-preset-react"],
+            plugins: ["babel-plugin-transform-decorators-legacy"],
           }
         }
       }
